Changed README, fixed a closed plots bug.

--- a/electron/mainwindow/html/index.html
+++ b/electron/mainwindow/html/index.html
@@ -82,7 +82,7 @@
 	</aside><!---->
 
     <script type="text/javascript">
-        require("../js/mainwindow-fastopt.js")
+        require("../js/mainwindow-opt.js")
     </script>
   </body>
 </html>
