--- a/electron/plotwindows/html/index.html
+++ b/electron/plotwindows/html/index.html
@@ -25,7 +25,7 @@
     <canvas id="canvas" style="border: 2px solid black"></canvas>
 
     <script type="text/javascript">
-        require("../js/plotwindows-fastopt.js")
+        require("../js/plotwindows-opt.js")
     </script>
   </body>
 </html>
